[package]
name = "top_proxy"
version = "0.1.0"
authors = ["Perseus"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = [ "full" ] }
rust-ini = "0.17.0"
termcolor = "1.1.2"
bytes = "1.0.1"
byteorder = "1.4.3"
num_enum = "0.5.1"
anyhow = "1.0"